/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package recordingpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/recordingpb";

import "eventpb/eventpb.proto";

message Entry {
	string node_id = 1;
	int64 time = 2;
	repeated eventpb.Event events =3;
}
